--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Tech Store - Tuấn Minh</title>
 
         <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="GRID-1.css">
+        <link rel="stylesheet" href="ASMTstyles.css">
     </head>
 
     <body>
@@ -137,3 +137,4 @@
 
     </body>
     </html>
+
