--- a/gaming.html
+++ b/gaming.html
@@ -115,8 +115,9 @@
         </div>
     </div>
 
-    <a href="codedasua.html" class="back-home">⬅ Quay về trang chủ</a>
+    <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
 </section>
 
 </body>
+
 </html>
