--- a/hoidap.html
+++ b/hoidap.html
@@ -64,6 +64,26 @@
         .back-home:hover {
             background: #1d2671;
         }
+        .faq-header {
+    background: linear-gradient(135deg, #1d2671, #c33764);
+    color: white;
+    padding: 20px 20px;
+    text-align: center;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+.faq-box {
+    max-width: 900px;
+    margin: 120px auto 40px; /* đẩy xuống */
+    background: white;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+}
     </style>
 </head>
 <body>
@@ -107,9 +127,8 @@
         </div>
     </div>
 
-    <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
+    <a href="codedasua.html" class="back-home">⬅ Quay về trang chủ</a>
 </section>
 
 </body>
-
 </html>
