--- a/gioithieu.html
+++ b/gioithieu.html
@@ -100,8 +100,9 @@
         <div class="feature-item">🎮 Gaming mượt mà</div>
     </div>
 
-    <a href="codedasua.html" class="back-home">⬅ Quay về trang chủ</a>
+    <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
 </section>
 
 </body>
 </html>
+
