--- a/sanpham.html
+++ b/sanpham.html
@@ -160,8 +160,9 @@
             <p class="price big">18.900.000đ</p>
             <a href="#" class="buy-btn">MUA</a>
         </div>
-         <a href="codedasua.html" class="back-home">⬅ Quay về trang chủ</a>
+         <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </section>
 
 </body>
 </html>
+
