--- a/gaming.html
+++ b/gaming.html
@@ -153,7 +153,8 @@
             <p class="price big">22.900.000đ</p>
             <a href="#" class="buy-btn">MUA</a>
         </div>
-         <a href="codedasua.html" class="back-home">⬅ Quay về trang chủ</a>
+         <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </section>
 </body>
 </html>
+
