--- a/login.html
+++ b/login.html
@@ -95,9 +95,10 @@
     </form>
 
     <p>
-        ⬅ <a href="codedasua.html">Quay về trang chủ</a>
+        ⬅ <a href="index.html">Quay về trang chủ</a>
     </p>
 </div>
 
 </body>
+
 </html>
