--- a/lienhe.html
+++ b/lienhe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Liên hệ - Tech Store</title>
-    <link rel="stylesheet" href="GRID-1.css">
+    <link rel="stylesheet" href="ASMTstyles.css">
 
     <style>
         .contact-header {
@@ -149,4 +149,5 @@
 
 </body>
 </html>
+
 
