--- a/gaming.html
+++ b/gaming.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gaming - Tech Store</title>
-    <link rel="stylesheet" href="GRID-1.css">
+    <link rel="stylesheet" href="ASMTstyles.css">
 
     <style>
         .gaming-header {
@@ -157,4 +157,5 @@
     </section>
 </body>
 </html>
+
 
