--- a/gioithieu.html
+++ b/gioithieu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Giới thiệu - Tech Store</title>
-    <link rel="stylesheet" href="GRID-1.css">
+    <link rel="stylesheet" href="ASMTstyles.css">
 
     <style>
            .intro-header {
@@ -105,4 +105,5 @@
 
 </body>
 </html>
+
 
