--- a/hoidap.html
+++ b/hoidap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hỏi đáp - Tech Store</title>
-    <link rel="stylesheet" href="GRID-1.css">
+    <link rel="stylesheet" href="ASMTstyles.css">
 
     <style>
         .faq-header {
@@ -132,4 +132,5 @@
 
 </body>
 </html>
+
 
