--- a/sanpham.html
+++ b/sanpham.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sản phẩm - Tech Store</title>
-    <link rel="stylesheet" href="GRID-1.css">
+    <link rel="stylesheet" href="ASMTstyles.css">
 
     <style>
         .product-header {
@@ -165,4 +165,5 @@
 
 </body>
 </html>
+
 
